Fixing spacing between nav menu bar words

--- a/src/main/resources/templates/NewContactUs/NewContactUs.css
+++ b/src/main/resources/templates/NewContactUs/NewContactUs.css
@@ -148,7 +148,8 @@ header {
     align-items: center;
     background-color: #14152A;
     color: #EAEBED;
-    padding: 10px 0;
+    padding: 50px;
+    font-size: 35px;
 }
 
 nav ul {
@@ -158,8 +159,9 @@ nav ul {
     padding: 0;
 }
 
+/* Add space between navigation menu items */
 nav ul li {
-    margin: 0 10px;
+    margin: 0 25px;
 }
 
 nav ul li a {
